# wasmer-js

./: Cargo.toml  lib.ts  package.json  rollup.config.js  tsconfig.json
pkg/: wasmer_wasi_js.d.ts  wasmer_wasi_js.js  wasmer_wasi_js_bg.wasm  wasmer_wasi_js_bg.wasm.d.ts
src/: browser_fs.rs  indexed_fs.rs  lib.rs  lightning_fs.rs  wasi.rs
tests/: index.spec.js  web.rs
