[package]
name = "wasmer-wasi-js"
version = "1.2.0"
authors = ["Syrus Akbary <syrus@wasmer.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasmer = { path = "../wasmer/lib/api", default-features = false, features = ["js", "std"] }
wasmer-wasi = { path = "../wasmer/lib/wasi", default-features = false, features = ["js"] }
wasmer-vfs = { path = "../wasmer/lib/vfs", default-features = false, features = ["mem-fs"] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.60", features = ["Window","console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
wasm-bindgen-futures = "0.4.33"


[profile.release]
lto = true
opt-level = 'z'
